--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "sw-precache-webpack-plugin": "^0.11.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
