--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "node-sass": "^4.7.2",
+    "pug": "^2.0.0-rc.4",
+    "sass-loader": "^6.0.6",
     "sw-precache-webpack-plugin": "^0.11.4",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
