--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "sw-precache-webpack-plugin": "^0.11.4",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
